2015-08-25  Paul Eggert  <eggert@cs.ucla.edu>

	Prefer directed to neutral quotes in docstings and diagnostics.
	In docstrings, escape apostrophes that would otherwise be translated
	to curved quotes using the newer, simpler rules.

	* auth-source.el (auth-source-netrc-parse-entries):
	* gnus-agent.el (gnus-agent-check-overview-buffer)
	(gnus-agent-fetch-headers):
	* gnus-int.el (gnus-start-news-server):
	* gnus-registry.el (gnus-registry--split-fancy-with-parent-internal):
	* gnus-score.el (gnus-summary-increase-score):
	* gnus-start.el (gnus-convert-old-newsrc):
	* gnus-topic.el (gnus-topic-rename):
	* legacy-gnus-agent.el (gnus-agent-unlist-expire-days):
	* nnmairix.el (nnmairix-widget-create-query):
	* spam.el (spam-check-blackholes):
	Use directed rather than neutral quotes in diagnostics.

2015-08-21  Paul Eggert  <eggert@cs.ucla.edu>

	* auth-source.el (auth-sources):
	Prefer (substitute-command-keys "`\\[foo-command]'")
	to "`M-x foo-command'" in docstring.

	* time-date.el (format-seconds):
	Use curved quotes in diagnostic format strings.

	* nnmairix.el (nnmairix-propagate-marks-upon-close):
	* pop3.el (pop3-authentication-scheme):
	Don't quote symbols with apostrophes in doc strings.
	Use asymmetric quotes instead.

2015-08-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	Use overlay functions directly

	* dgnushack.el (overlay): Autoload overlay functions for XEmacs.
	* lpath.el (delete-overlay, overlay-lists): Remove Fbind.

	* gnus-art.el (gnus-mime-inline-part, gnus-mm-display-part)
	(gnus-insert-mime-button, gnus-mime-buttonize-attachments-in-header)
	(gnus-article-highlight-signature, gnus-article-extend-url-button)
	(gnus-article-add-button, gnus-insert-prev-page-button)
	(gnus-insert-next-page-button, gnus-insert-mime-security-button):
	* gnus-cite.el (gnus-cite-delete-overlays, gnus-cite-add-face):
	* gnus-html.el (gnus-html-wash-tags):
	* gnus-salt.el (gnus-tree-read-summary-keys, gnus-tree-recenter)
	(gnus-highlight-selected-tree):